--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,34 +2,43 @@ version: '3.8'
 
 services:
   backend:
-    build: ./backend
+    image: node:18-alpine
+    container_name: ai-chat-backend
+    working_dir: /app
     ports:
       - "3000:3000"
     environment:
       - NODE_ENV=production
       - PORT=3000
-      - GROQ_API_KEY=${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}
-      - TELEGRAM_BOT_TOKEN=${8200429613:AAGTgP5hnOiRIxXc3YJmxvTqwEqhQ4crGkk}
-      - ADMIN_TELEGRAM_ID=${7321524568}
-      - RAILWAY_STATIC_URL=${web-production-4063.up.railway.app}
+      - GROQ_API_KEY=${GROQ_API_KEY}
+      - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
+      - ADMIN_TELEGRAM_ID=${ADMIN_TELEGRAM_ID}
+    env_file:
+      - .env
     volumes:
       - ./backend:/app
       - /app/node_modules
+    command: sh -c "npm install && node server.js"
     restart: unless-stopped
     networks:
       - chat-network
 
   telegram-bot:
-    build: ./telegram
+    image: node:18-alpine
+    container_name: ai-chat-telegram
+    working_dir: /app
     environment:
       - NODE_ENV=production
-      - TELEGRAM_BOT_TOKEN=${8200429613:AAGTgP5hnOiRIxXc3YJmxvTqwEqhQ4crGkk}
-      - ADMIN_TELEGRAM_ID=${7321524568}
+      - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
+      - ADMIN_TELEGRAM_ID=${ADMIN_TELEGRAM_ID}
       - BACKEND_URL=http://backend:3000
       - TELEGRAM_BOT_PORT=3001
+    env_file:
+      - .env
     volumes:
       - ./telegram:/app
       - /app/node_modules
+    command: sh -c "npm install && node bot.js"
     depends_on:
       - backend
     restart: unless-stopped
