--- a/backend/package.json
+++ b/backend/package.json
@@ -1,20 +1,17 @@
 {
-  "name": "ai-chat-bridge-backend",
+  "name": "ai-chat-bridge",
   "version": "1.0.0",
-  "description": "Backend for AI Chat Bridge",
+  "description": "AI Chat Bot with Telegram Support",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "ws": "^8.14.2",
     "axios": "^1.6.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
-  },
-  "engines": {
-    "node": ">=16.0.0"
+    "dotenv": "^16.3.1",
+    "telegraf": "^4.16.3"
   }
 }
