--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 PORT=3000
+TELEGRAM_PORT=3001
 GROQ_API_KEY=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
 TELEGRAM_BOT_TOKEN=8200429613:AAGTgP5hnOiRIxXc3YJmxvTqwEqhQ4crGkk
 ADMIN_TELEGRAM_ID=7321524568
+BACKEND_URL=https://your-railway-url.up.railway.app
+TELEGRAM_BOT_URL=http://localhost:3001
+RAILWAY_STATIC_URL=https://your-railway-url.up.railway.app
 NODE_ENV=production
