--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ GROQ_API_KEY=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
 # Telegram Configuration
 TELEGRAM_BOT_TOKEN=8200429613:AAF_rir5Sui9W4uX69Vlm2emMPjW7Qys5-g
 ADMIN_TELEGRAM_ID=7321524568
-TELEGRAM_BOT_URL=https://ai-chat-support-production.up.railway.app
+TELEGRAM_BOT_URL=https://ai-chat-support-production.up.railway.app/telegram-webhook
 
 TELEGRAM_PORT=3000
 
