--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,10 @@ BACKEND_URL=https://ai-chat-support-production.up.railway.app
 # AI Configuration
 GROQ_API_KEY=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
 
+DB_HOST=localhost
+DB_USER=apmsho_shikpooshan
+DB_PASSWORD=5W2nn}@tkm8926G*
+DB_NAME=apmsho_shikpooshan
 
 
 
