--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "helmet": "^7.0.0",
     "dotenv": "^16.3.1",
     "node-cache": "^5.1.2",
-    "mysql2": "^3.9.0"
+    "mysql2": "^3.9.0",
+    "natural": "^8.0.1",
+    "openai": "^4.20.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
